# shakhan-stellar

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
components/: BalanceDisplay.test.tsx  BalanceDisplay.tsx  FundCampaign.test.tsx  FundCampaign.tsx  PaymentForm.tsx  SplitBill.tsx  TipJar.tsx  TransactionHistory.test.tsx  TransactionHistory.tsx  example-components.tsx
contracts/contracts/badge/: Cargo.toml
contracts/contracts/badge/src/: lib.rs  test.rs
contracts/contracts/badge/test_snapshots/test/: award_accumulates_and_promotes_tier.1.json  award_publishes_an_event.1.json  badges_are_scoped_per_campaign.1.json  roster_lists_each_supporter_once.1.json  thresholds_must_ascend.1.json  unregistered_campaign_cannot_award.1.json  zero_amount_is_rejected.1.json
contracts/contracts/crowdfunding/: Cargo.toml
contracts/contracts/crowdfunding/src/: lib.rs  test.rs
contracts/contracts/crowdfunding/test_snapshots/test/: a_broken_registry_does_not_block_contributions.1.json  badge_registry_can_be_replaced_and_cleared.1.json  badge_registry_is_set_once.1.json  campaign_works_without_a_badge_registry.1.json  contribute_after_deadline_fails.1.json  contribute_publishes_an_event.1.json  contribute_reaches_goal_and_withdraws.1.json  contributing_awards_a_badge.1.json  refund_after_failed_campaign.1.json
lib/: amounts.test.ts  amounts.ts  crowdfunding.ts  wallet.test.ts  wallet.ts  watch.test.ts
